2007-07-27  Tim-Philipp Müller  <tim at centricular dot net>

	* src/base64.c: (gnet_base64_encode), (gnet_base64_decode):
	* src/base64.h:
	  Make arguments for input buffers constant; add more guards against
	  invalid arguments.

2007-07-26  Tim-Philipp Müller  <tim at centricular dot net>

	* Makefile.am:
	* configure.ac:
	* macros/Makefile.am:
	* macros/gnet-arch.m4:
	* tests/Makefile.am:
	* tests/check/Makefile.am:
	* tests/check/gnet-valgrind.supp:
	* tests/check/gnet/gnetabi.c:
	* tests/check/gnet/struct_i386.h:
	* tests/check/gnet/struct_ppc64.h:
	* tests/check/gnet/struct_x86_64.h:
	* tests/check/gnetcheck.c:
	* tests/check/gnetcheck.h:
	  Add build infrastructure for unit tests based on libcheck.

2007-07-22  Tim-Philipp Müller  <tim at centricular dot net>

	* autogen.sh:
	  Use '=' instead of '==' to test for equality, dash in gutsy (which
	  seems to be the default shell now) doesn't seem to like '=='.

	* tests/conn_http_test.c:
	  Add cast to fix compiler warnings due to printf format.

2007-06-11  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Samuel Cormier-Iijima <sciyoshi@gmail.com>

	* examples/xmlrpc/xmlrpc-server.c:
	(create_response_string):
	  Printf format fix for 64-bit systems.

2007-04-30  Tim-Philipp Müller  <tim at centricular dot net>

	* TODO:
	  Minor update.

	* src/server.h:
	  Document where to find details of the connecting client in the
	  GServer callback.

2007-03-26  Tim-Philipp Müller  <tim at centricular dot net>

        * doc/gnet-docs.sgml:
	  The pkg-config module name is gnet-2.0, not gnet. Fix docs.

2007-02-23  Dov Grobgeld  <dov.grobgeld@gmail.com>

	* examples/xmlrpc: Added option to split the call and the reply for xmlrpc
	commands through the addition of command gnet_xmlrpc_server_register_async_command(),
	which passes the connection variable but does not return a reply. This is useful
	when the reply may not be given immediately (in terms of mainloop interaction).
